# camera-detection

./: .gitignore  Containerfile  README.md  dot_env  main.py  parameters.yaml  pyproject.toml  requirements.txt
assets/: onnx.html
elyra/: 1 - Download Dataset.ipynb  2 - Download Base Model.ipynb  3 - Finetune Model.ipynb  4 - Upload Finetuned Checkpoint.ipynb  yolo finetuning pipeline.pipeline
jupyter/: labels.yaml  opencv_image_histogram.ipynb  opencv_imageio.py  yolo_finetune.ipynb  yolo_finetune_kaggle.ipynb  yolo_onnx_inference.ipynb
kubeflow/: convert_model.py  fetch_data.py  main_pipeline.py  persistent_data.py  pipeline.yaml  save_model.py  train_model.py
libs/: console_utils.py  histogram.py  huggingface.py  imageio.py  parameters.py  s3io.py  utils.py
pipelines/: 1 - Download Dataset.ipynb  2 - Download Base Model.ipynb  3 - Finetune Model.ipynb  yolo finetuning pipeline.pipeline
