[project]
name = "camera-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.13",
    "opencv-python>=4.11.0.86",
    "pip>=25.2",
    "torch>=2.8.0",
    "ultralytics==8.3.65",
]
