[project]
name = "image-detection"
version = "0.1.0"
description = "An image detection demo using YOLOv11, kagglehub, higgingface-hub and Kubeflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.13",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pip>=25.2",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "ultralytics==8.3.65",
]
